# nano-NotebookLM

./: .dockerignore  .env.example  .gitignore  AGENT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GOAL.md  IEEEtranCN.cls  LICENSE  NOTICE  README.md  README.zh-CN.md  STATUS.md  dev.sh  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: test.yml
api/: server.py
benchmarks/: NIGHTLY_2026-05-13.md  build_questions_100.py  codex_monitor_20260512-173251Z.json  codex_monitor_20260512-173251Z.md  judge.py  judged.jsonl  questions_100.json  qwen_monitor_20260512-172312Z.json  qwen_monitor_20260512-172312Z.md  qwen_vs_codex_REPORT.md  qwen_vs_codex_questions.json  report.md  results.jsonl  run_benchmark.py  style_analysis.py
docs/screenshots/: README.md
experiments/mineru_validation/: VERDICT.md  VERDICT_TEMPLATE.md  compare.py  index.html  make_compare_visual.py  make_html_preview.py  run_pymupdf_baseline.py
frontend/: api.js  app.jsx  assistant.jsx  data.jsx  exam-prep.jsx  i18n.js  index.html  latex-to-html.js  library.jsx  markdown.js  mindmap.jsx  processing.jsx  reader.jsx  settings.jsx  study-state.js  styles.css  tweaks-panel.jsx
huggingface_space/: DEPLOY.md  README.md  deploy.sh
nano-notebooklm-design/: Marginalia.html  app.jsx  assistant.jsx  data.jsx  mindmap.jsx  notes.jsx  quiz.jsx  styles.css
nano_notebooklm/: __init__.py  __main__.py  config.py  types.py
nano_notebooklm/agents/: __init__.py  formatter.py  web_research.py
nano_notebooklm/ai/: base.py  claude_backend.py  local_backend.py  openai_backend.py  prompt_templates.py  qwen_raft_backend.py  router.py
nano_notebooklm/ingest/: chunker.py  extractors.py  extractors_mineru.py  formula_surrogate.py  incremental.py  pptx_pdf.py
nano_notebooklm/kb/: bm25_index.py  graph_search.py  hybrid_search.py  schema.py  store.py  vector_index.py
nano_notebooklm/kg/: extractor.py  graph.py  merger.py  visualizer.py
nano_notebooklm/orchestrator/: agent_loop.py  agent_tools.py  checkpoint.py  engine.py  memory.py  parallel.py  router_intent.py  session.py  session_log.py
nano_notebooklm/orchestrator/tools/: __init__.py  read_chunk.py  (+3 more)
nano_notebooklm/skills/: base.py  exam_analyzer.py  exam_prep.py  latex_sanitizer.py  mastery_tracker.py  note_generator.py  notes_full_course.py  qa_skill.py  quiz_generator.py  report_generator.py
nano_notebooklm/utils/: file_hash.py  token_counter.py
scripts/: autodl_tunnel.sh  build_eval_questions.py  build_indices.py  generate_benchmark_latex.py  ingest_all.py  ingest_course.py  ingest_with_mineru.py  qwen_monitor.py  qwen_vs_codex_benchmark.py  reembed_all.py  run_eval.py  switch_backend.sh
test-slides/: nlp_benchmark_100_questions.md
tests/: conftest.py  test_agent_api.py  test_agent_loop.py  test_agent_loop_strict.py  test_agent_tool_handlers.py  test_agent_tools.py  test_agent_tools_strict.py  test_agents.py  test_api_security.py  test_api_smoke.py  test_assistant_wiring.py  test_chat_history.py  test_chunker.py  test_chunker_strict.py  test_chunks_endpoint.py  test_collect_files_dedup.py  test_embedding_preset.py  test_eta_estimator.py  test_eval_question_builder.py  test_eval_smoke.py  test_exam_prep.py  test_extractors_mineru.py  test_extractors_mineru_server.py  test_fix_all_v4.py  test_frontend_helpers.py  test_graph_search.py  test_kb_search_strict.py  test_kg_extractor.py  test_kg_stage_b_sampling.py  test_latex_sanitizer.py  test_mindmap_edit.py  test_mindmap_force_layout.py  test_mindmap_layout.py  test_mindmap_learning_order.py  test_mindmap_payload.py  test_note_latex_output.py  test_notes_full_course.py  test_notes_full_course_cache.py  test_notes_pdf_export.py  test_persona.py  (+30 more)
ui/: app.py
ui/tabs/: exam_tab.py  kg_tab.py  mastery_tab.py  notes_tab.py  qa_tab.py  upload_tab.py
(+15 files in other folders)
