[project]
name = "nano-notebooklm"
version = "0.2.0"
description = "Self-hosted, provider-agnostic study assistant: chat with citations, structured LaTeX notes, exam-prep with a self-evolving question bank, and an editable knowledge graph"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["notebooklm", "rag", "knowledge-graph", "study-assistant", "llm", "self-hosted", "fastapi"]
authors = [
    { name = "ArthurYangX", email = "yangjc27@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # AI backends
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "tiktoken>=0.7.0",
    # Document processing
    "PyMuPDF>=1.24.0",
    "python-pptx>=0.6.23",
    "python-docx>=1.1.0",
    # Embeddings & search
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8.0",
    "rank-bm25>=0.2.2",
    # Knowledge graph
    "networkx>=3.3",
    # Data handling
    "pydantic>=2.7",
    "numpy>=1.26",
    "jieba>=0.42.1",
    # Utilities
    "rich>=13.0",
    "python-dotenv>=1.0",
    "aiohttp>=3.9",
    # API server
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
# MinerU is the OCR / layout-aware PDF extractor used when a course is
# uploaded with engine=mineru (scanned PDFs, formula-heavy slides).
# Heavy install (~3-5GB with torch + models on first run) — keep it
# opt-in so the default `pip install -e .` stays slim.
mineru = [
    "mineru[pipeline]>=3.0",
]

[project.scripts]
nano-nlm = "nano_notebooklm.__main__:main"

[tool.setuptools.packages.find]
include = ["nano_notebooklm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
